--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         I am proficient in ASP.NET MVC, ASP.NET CORE, ASP.NET WEB API C#. NET, Architecture,ADO.NET, HTML, CSS, BOOTSTRAP & SQL Server,  . I have a good Understanding of software development lifecycle. I have a Strong analytical and problem solving skills and excellent verbal and written communication skills with Proficient in MS Office Suite. 
                         I am a Self-starter with excellent interpersonal, motivational, and facilitation skills.
                     </p>
-                    <a href="#">Download CV</a>
+                    <a href="GulzarAhmadBilal-CV.pdf">Download CV</a>
                 </div>
             </div>
         </div>
