--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="profile-img.jpeg" alt="">
+                    <img src="IMG_20240329_001533.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Gulzar Ahmad Bilal and I'm a <span class="typing-2"></span></div>
